# Wind-Turbine-Inspection

./: .gitmodules  NLMPC_launch  README.md  bashrc_vtmpc.txt  install_all.sh  notes_inspectionturbine  quaternions notes  waypoint_hakim.cpp
FlaskGUI/: app.py
FlaskGUI/backend/: airsim_backend.py  windprofile.py
FlaskGUI/backend/py_wake/wind_farm_models/: wind_farm_model.py
FlaskGUI/blueprints/inspection/: inspection_page.py
FlaskGUI/static/css/: inspection.css
FlaskGUI/static/js/: inspection.js
FlaskGUI/templates/: inspection.html
FlaskGUI/templates/modules/: modal.html  sidebar.html
NMPC_code_generator/acado_ccode_generation/: CMakeLists.txt  package.xml
NMPC_code_generator/acado_ccode_generation/src/quadrotor/: nmpc_pc_learning_ccode.cpp
NMPC_implementations/nmpc_pc_learning/include/: nmpc_pc_learning.h  nmpc_pc_learning_main.h
NMPC_implementations/nmpc_pc_learning/solver/: nmpc_common.h  nmpc_integrator.c  nmpc_solver.c
NMPC_implementations/nmpc_pc_learning/solver/qpoases/INCLUDE/: Constants.hpp  Constants.hpp~
NMPC_implementations/nmpc_pc_learning/src/: nmpc_pc_learning.cpp  nmpc_pc_learning_main.cpp
PX4/: px4_mavros_airsim_guide.txt
StructuralInspectionPlanner/koptplanner/: windTurbineParam.yaml
StructuralInspectionPlanner/koptplanner/data/: latestPath.csv  tourlength.m
StructuralInspectionPlanner/koptplanner/launch/: kopt.launch  wind_turbine.launch
StructuralInspectionPlanner/koptplanner/lookupTable/: lookupTable10x10.txt  lookupTable50x50.txt
StructuralInspectionPlanner/optec/: make_windows.mk
StructuralInspectionPlanner/optec/doc/: mainpage.dox
StructuralInspectionPlanner/optec/examples/: Makefile  example4CP.cpp
StructuralInspectionPlanner/optec/include/optec/: Constants.hpp  ConstraintProduct.hpp  UnitTesting.hpp  qpOASES.hpp
StructuralInspectionPlanner/optec/include/optec/extras/: OQPinterface.hpp
StructuralInspectionPlanner/optec/interfaces/matlab/: Makefile  make.m  qpOASES_matlab_utils.cpp  qpOASES_sequence.cpp
StructuralInspectionPlanner/optec/interfaces/octave/: make.m  qpOASES.cpp  qpOASES_octave_utils.cpp  qpOASES_sequence.cpp
StructuralInspectionPlanner/optec/interfaces/scilab/: Makefile
StructuralInspectionPlanner/optec/interfaces/simulink/: example_QProblem.mdl  example_QProblemB.mdl  example_SQProblem.mdl  make.m
StructuralInspectionPlanner/optec/src/: Makefile  OQPinterface.cpp
StructuralInspectionPlanner/request/: CMakeLists.txt
StructuralInspectionPlanner/request/meshes/: t_with_side_flipped.stl  turbine.stl  turbine_ascii.stl  turbine_fine.stl
StructuralInspectionPlanner/request/src/: windTurbine.cpp
StructuralInspectionPlanner/request/visualization/: inspectionPathVisualization.m  inspectionScenario.m
StructuralInspectionPlanner/rviz/: kopt_rviz.rviz
StructuralInspectionPlanner/utils/PathToTrajectory/: ExamplePath.csv
WTI_px4_modified/shell_scripts/: run_sitl_gazebo_withWrapper_terminator.sh
dji_m100_trajectory/: CMakeLists.txt
dji_m100_trajectory/Exp_data/: name_file.txt
dji_m100_trajectory/cfg/: set_recdata.cfg  set_trajectory_v2.cfg  set_wind_generation.cfg
dji_m100_trajectory/include/: recdata.h  trajectory.h  trajectory_v2.h
dji_m100_trajectory/launch/: m100_trajectory_v2_indoor.launch  m100_trajectory_v2_outdoor.launch  windgen_recdata.launch
dji_m100_trajectory/src/: recdata.cpp  trajectory.cpp  trajectory_v2.cpp  wind_generation.cpp
mavros_controller/: Makefile  README.md  dependencies.rosinstall
mavros_controller/offboard_control/: CMakeLists.txt  package.xml
mavros_controller/offboard_control/include/: offboard_control.h  wind_turbine.hpp
mavros_controller/offboard_control/launch/: offboard_control.launch
mavros_controller/offboard_control/src/: hakim.cpp  mpc_link.cpp  offboard_control.cpp  offboard_control_node.cpp
mavros_controllers/: Makefile
mavros_controllers/geometric_controller/include/geometric_controller/: geometric_controller.h
mavros_controllers/geometric_controller/launch/: sitl_trajectory_track_circle.launch  trajectory_controller.launch
mavros_controllers/geometric_controller/src/: geometric_controller.cpp
mavros_controllers/offboard_control/: CMakeLists.txt  package.xml
mavros_controllers/offboard_control/include/: common.h  offboard_control.h
mavros_controllers/offboard_control/src/: offboard_control.cpp
mavros_controllers/trajectory_publisher/include/trajectory_publisher/: trajectoryPublisher.h
mavros_controllers/trajectory_publisher/src/: trajectoryPublisher.cpp
mission_control/: Makefile
mission_control/state_machine/: CMakeLists.txt  package.xml
mission_control/state_machine/include/: HTTPRequest.hpp  simple_json.hpp  state_machine.h
mission_control/state_machine/launch/: mission_control_node.launch
mission_control/state_machine/src/: mission_control_node.cpp  state_machine.cpp
rqt_multiplot_configs/: matrice_100_wind_estimation.xml
