<package>
    <name>offboard_control</name>
    <version>0.0.1</version>
    <description>Contains useful controllers for mavros</description>

    <maintainer email="jonas.le.fevre@ece.au.dk">Jonas le Fevre Sejersen</maintainer>

    <author>Jonas le Fevre Sejersen</author>

    <license>BSD-3</license>


    <!-- Dependencies which this package needs to build itself. -->
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>eigen_catkin</build_depend>
    <build_depend>mavros_msgs</build_depend>
    <build_depend>mavros</build_depend>
    <build_depend>mavros_extras</build_depend>

    <!-- Dependencies needed after this package is compiled. -->
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>mavros_msgs</run_depend>
    <run_depend>mavros</run_depend>
    <run_depend>mavros_extras</run_depend>
    <export>

    </export>
</package>
